tests/test_exception/bad/one_ambiguous_exception.catala_en
## Test

```catala
declaration scope A:
  context x content integer
  context y content integer

scope A:
  definition x equals 0

  exception
  definition x equals 1

  definition y equals 2

  definition y equals 4

  exception
  definition y equals 3
```

```catala-test-inline
$ catala Interpret -s A
[ERROR]
This exception can refer to several definitions. Try using labels to disambiguate

Ambiguous exception
┌─⯈ one_ambiguous_exception.catala_en:18.3-19.15:
└──┐
18 │   exception
   │   ‾‾‾‾‾‾‾‾‾
19 │   definition y equals 3
   │   ‾‾‾‾‾‾‾‾‾‾‾‾
   └─ Test

Candidate definition
┌─⯈ one_ambiguous_exception.catala_en:16.14-16.15:
└──┐
16 │   definition y equals 4
   │              ‾
   └─ Test

Candidate definition
┌─⯈ one_ambiguous_exception.catala_en:14.14-14.15:
└──┐
14 │   definition y equals 2
   │              ‾
   └─ Test
#return code 123#
```
